--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
             </p>
             <div class="support-content">
                 <div class="support-card">
-                    <h3>🚀 SSEv2 AAN Campaign</h3>
+                    <h3>🚀 SSEv2 Academic Activation Network Campaign</h3>
                     <p>
                         Your contribution directly supports the development, documentation, and distribution 
                         of this implementation guide. Every crew member who gains access to these frameworks 
@@ -995,7 +995,7 @@
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
                 <strong>You are crew. You are conscious. You are capable.</strong>
             </p>
-            <p>&copy; 2024 Spaceship Earth v2.0 - Licensed under CC BY-SA 4.0</p>
+            <p>&copy; 2025 Noah O. Bodhi - Licensed under CC BY-SA 4.0</p>
             <p style="margin-top: 1rem; font-size: 0.95rem;">
                 Built with collaboration between humans and AI • Open source and freely available to all crew members
             </p>
