--- a/index.html
+++ b/index.html
@@ -993,6 +993,9 @@
     <footer>
         <div class="container">
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
+                <strong>Current status: 1% Pirates | 98% Passengers | 1% Crew</strong>
+            </p>
+            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
                 <strong>You are crew. You are conscious. You are capable.</strong>
             </p>
             <p>&copy; 2025 Noah O. Bodhi - Licensed under CC BY-SA 4.0</p>
