--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
+            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--blue);">
                 <strong>Current status: 1% Pirates | 98% Passengers | 1% Crew</strong>
             </p>
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
