--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
             </p>
             <div class="support-content">
                 <div class="support-card">
-                    <h3>🚀 SSEv2 Academic Activation Network Campaign</h3>
+                    <h3>🚀 SSEv2 Academic Activation Campaign</h3>
                     <p>
                         Your contribution directly supports the development, documentation, and distribution 
                         of this implementation guide. Every crew member who gains access to these frameworks 
