--- a/index.html
+++ b/index.html
@@ -680,9 +680,9 @@
             <div class="logo">SPACESHIP EARTH v2.0</div>
             <ul class="nav-links">
                 <li><a href="#about">Mission</a></li>
-                <li><a href="#chapters">Read</a></li>
+                <li><a href="#chapters">Guide</a></li>
                 <li><a href="#support">Support</a></li>
-                <li><a href="#repository">Contribute</a></li>
+                <li><a href="#repository">Create</a></li>
             </ul>
         </nav>
     </header>
@@ -693,6 +693,8 @@
             <div class="crew-badge">🚀 Implementation Guide Available</div>
             <h1>Spaceship Earth v2.0</h1>
             <p class="crew-message">You are crew. You are conscious. You are capable.</p>
+             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--red);">
+                <strong>Current status: 1% Pirates | 98% Passengers | 1% Crew</strong>
             <p class="description">
                 A comprehensive implementation guide for transitioning from passenger consciousness 
                 to crew consciousness—designed to help communities, organizations, and individuals 
@@ -714,7 +716,7 @@
             </p>
 
             <div class="philosophy-card">
-                <h3>From Passengers to Crew</h3>
+                <h3>From Passenger to Crew</h3>
                 <p>
                     This implementation guide draws from Buckminster Fuller's vision of Spaceship Earth, 
                     reimagined for the 21st century. It provides practical frameworks for transitioning 
@@ -992,7 +994,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--blue);">
+            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--red);">
                 <strong>Current status: 1% Pirates | 98% Passengers | 1% Crew</strong>
             </p>
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
