--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
             </p>
             <div class="cta-buttons">
                 <a href="#chapters" class="btn btn-primary">Begin Your Journey</a>
-                <a href="#support" class="btn btn-secondary">Join the Crew</a>
+                <a href="#support" class="btn btn-secondary">Support the Crew</a>
             </div>
         </div>
     </section>
@@ -935,7 +935,7 @@
                     </p>
                     <div class="support-amount">Every Crew Member Counts</div>
                     <a href="https://www.gofundme.com/f/SSEv2-AAN-Campaign" target="_blank" class="btn btn-primary">
-                        Join the Crew Fund
+                        Donate to the Crew Fund
                     </a>
                 </div>
                 <p style="margin-top: 2rem; opacity: 0.95; font-size: 1.1rem;">
