Change 'Current status' text to uppercase

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
             <h1>Spaceship Earth v2.0</h1>
             <p class="crew-message">You are crew. You are conscious. You are capable.</p>
              <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--red);">
-                <strong>Current status: 1% Pirates | 98% Passengers | 1% Crew</strong>
+                <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             <p class="description">
                 A comprehensive implementation guide for transitioning from passenger consciousness 
                 to crew consciousness—designed to help communities, organizations, and individuals 
@@ -995,7 +995,7 @@
     <footer>
         <div class="container">
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--red);">
-                <strong>Current status: 1% Pirates | 98% Passengers | 1% Crew</strong>
+                <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             </p>
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
                 <strong>You are crew. You are conscious. You are capable.</strong>
