Adjust hero section padding and text color
Updated padding in hero section and changed text color from red to nebula-purple for better visibility.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             position: relative;
             background: var(--cosmic-gradient);
             color: var(--cloud-white);
-            padding: 140px 2rem 100px;
+            padding: 140px 2rem 120px;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -902,7 +902,7 @@
             <div class="crew-badge">🚀 Implementation Guide Available</div>
             <h1>Spaceship Earth v2.0</h1>
             <p class="crew-message">You are crew. You are conscious. You are capable.</p>
-             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--red);">
+             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--nebula-purple);">
                 <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             <p class="description">
                 A comprehensive implementation guide for transitioning from passenger consciousness 
@@ -1308,7 +1308,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--red);">
+            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--nebula-purple);">
                 <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             </p>
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
