--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
             <div class="crew-badge">🚀 Implementation Guide Available</div>
             <h1>Spaceship Earth v2.0</h1>
             <p class="crew-message">You are crew. You are conscious. You are capable.</p>
-             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--nebula-purple);">
+             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--crew-orange);">
                 <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             <p class="description">
                 A comprehensive implementation guide for transitioning from passenger consciousness 
@@ -1308,7 +1308,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--nebula-purple);">
+            <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--crew-orange);">
                 <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             </p>
             <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--aurora-green);">
