Update hero section styles for responsiveness
Adjust padding and min-height for hero section on smaller screens.

--- a/index.html
+++ b/index.html
@@ -832,6 +832,9 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            .hero {
+                padding: 120px 1.5rem 100px;
+                min-height: auto;
             .hero h1 {
                 font-size: 2.5rem;
             }
