--- a/index.html
+++ b/index.html
@@ -1367,24 +1367,13 @@
         });
 
         // Parallax effect for hero
-        // Parallax effect for hero - DESKTOP ONLY
-    window.addEventListener('scroll', () => {
-        // Disable on mobile to prevent overlap
-        if (window.innerWidth > 768) {
+        window.addEventListener('scroll', () => {
             const scrolled = window.pageYOffset;
             const hero = document.querySelector('.hero');
             if (hero && scrolled < hero.offsetHeight) {
-                hero.style.transform = `translateY(${scrolled * 0.4}px)`;  // Gentler effect
+                hero.style.transform = `translateY(${scrolled * 0.5}px)`;
             }
-        } else {
-            // Reset transform on mobile
-            const hero = document.querySelector('.hero');
-            if (hero) {
-                hero.style.transform = 'none';
-        }
-    }
-});
-
+        });
         // Handle Netlify Form Success
         // Check for success parameter in URL
         const urlParams = new URLSearchParams(window.location.search);
