Update chapter description and add epilogue link

--- a/index.html
+++ b/index.html
@@ -972,8 +972,8 @@
         <div class="container">
             <h2 class="section-title">The Implementation Guide</h2>
             <p class="section-subtitle">
-                18 chapters across 6 parts, providing a complete framework from understanding the 
-                current system to achieving planetary coordination
+                18 chapters across 6 parts, appendices and front matter, providing a complete framework from understanding the 
+                current extraction system to achieving planetary abundance coordination
             </p>
 
             <div class="parts-container">
@@ -1122,6 +1122,11 @@
                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_6_evolutionary_leap/Chapter%2018%20The%20Cosmic%20Perspective.md" target="_blank" class="chapter-card">
                             <div class="chapter-number">18</div>
                             <div class="chapter-title">The Cosmic Perspective</div>
+                            <p class="chapter-description">Our place in the universe as a conscious spaceship crew</p>
+                        </a>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_6_evolutionary_leap/EPILOGUE%20REPORTING%20FOR%20DUTY.md">
+                            <div class="chapter-number">EPILOGUE</div>
+                            <div class="chapter-title">Ready for Duty</div>
                             <p class="chapter-description">Our place in the universe as a conscious spaceship crew</p>
                         </a>
                     </div>
