--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_6_evolutionary_leap/EPILOGUE%20REPORTING%20FOR%20DUTY.md">
                             <div class="chapter-number">EPILOGUE</div>
                             <div class="chapter-title">Ready for Duty</div>
-                            <p class="chapter-description">Our place in the universe as a conscious spaceship crew</p>
+                            <p class="chapter-description">Report for duty. Spaceship Earth v2.0 needs you.</p>
                         </a>
                     </div>
                 </div>
