Update link to open in new tab
Added target attribute to link for opening in new tab.

--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@
                             <div class="chapter-title">The Cosmic Perspective</div>
                             <p class="chapter-description">Our place in the universe as a conscious spaceship crew</p>
                         </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_6_evolutionary_leap/EPILOGUE%20REPORTING%20FOR%20DUTY.md" class="chapter-card">
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_6_evolutionary_leap/EPILOGUE%20REPORTING%20FOR%20DUTY.md" target="_blank" border-color: var(--stellar-gold); class="chapter-card">
                             <div class="chapter-number">EPILOGUE</div>
                             <div class="chapter-title">Ready for Duty</div>
                             <p class="chapter-description">Report for duty. Spaceship Earth v2.0 needs you.</p>
