Update chapter titles and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -1140,24 +1140,28 @@
                     <div class="chapters-grid">
                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/appendices/X%20-%20APPENDIX%20A%20Operating%20Manual%20for%20Spaceship%20Earth.md" target="_blank" class="chapter-card">
                             <div class="chapter-number">A</div>
-                            <div class="chapter-title">SUMMARY</div>
-                            <p class="chapter-description">Opreatng Manual for Spaceship Earth</p>
+                            <div class="chapter-title">Appendix A</div>
+                            <p class="chapter-description">Opreatng Manual for Spaceship Earth Summary</p>
                         </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%205%20Blockchain%20as%20Truth%20and%20Abundance%20Infrastructure.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">05</div>
-                            <div class="chapter-title">Blockchain as Truth and Abundance Infrastructure</div>
-                            <p class="chapter-description">Building trustless coordination systems for resource democracy</p>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/appendices/X%20-%20APPENDIX%20B%20The%20Mathematics%20of%20Abundance.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">B</div>
+                            <div class="chapter-title">Appendix B</div>
+                            <p class="chapter-description">The Mathematics of Abundance</p>
                         </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%206%20Cybersecurity%20and%20Privacy%20as%20Freedom%20Foundation.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">06</div>
-                            <div class="chapter-title">Cybersecurity and Privacy as Freedom Foundation</div>
-                            <p class="chapter-description">Protecting crew sovereignty in digital coordination systems</p>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/appendices/X%20-%20APPENDIX%20C%20Technical%20Reference.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">C</div>
+                            <div class="chapter-title">Appendix C</div>
+                            <p class="chapter-description">Technical Reference</p>
                         </a>
                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%207%20Data%20Science%20as%20Planetary%20Sensing%20System.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">07</div>
-                            <div class="chapter-title">Data Science as Planetary Sensing System</div>
-                            <p class="chapter-description">Real-time awareness of our spaceship's vital signs and resources</p>
+                            <div class="chapter-number">D</div>
+                            <div class="chapter-title">Appendix D</div>
+                            <p class="chapter-description">Case Studies</p>
                         </a>
+                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/appendices/X%20-%20APPENDIX%20C%20Technical%20Reference.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">E</div>
+                            <div class="chapter-title">Appendix E</div>
+                            <p class="chapter-description">Economic Foundations for the CARE$ Alternative Currency Model</p>
                     </div>
                 </div>
             </div>
