Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -1310,7 +1310,7 @@
                         <div class="info-icon">📧</div>
                         <div class="info-content">
                             <h4>Mission Control</h4>
-                            <p>crew@spaceshipearth.v2</p>
+                            <p>email: noah.o.bodhi@</p>
                             <span class="info-note">(Coming Soon - Platform in Development)</span>
                         </div>
                     </div>
