--- a/index.html
+++ b/index.html
@@ -1165,6 +1165,35 @@
                          </a>
                     </div>
                 </div>
+                 <!-- Front Matter -->
+                <div class="part-section">
+                    <div class="part-header">
+                        <div class="part-number">FMr</div>
+                        <h3 class="part-title">Front Matter</h3>
+                    </div>
+                    <div class="chapters-grid">
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%204%20AI%20as%20Comprehensive%20Intelligence%20Amplifier.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">Author's Note</div>
+                            <div class="chapter-title">AI as Comprehensive Intelligence Amplifier</div>
+                            <p class="chapter-description">Leveraging AI for crew-level decision making and coordination</p>
+                        </a>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%205%20Blockchain%20as%20Truth%20and%20Abundance%20Infrastructure.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">05</div>
+                            <div class="chapter-title">Blockchain as Truth and Abundance Infrastructure</div>
+                            <p class="chapter-description">Building trustless coordination systems for resource democracy</p>
+                        </a>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%206%20Cybersecurity%20and%20Privacy%20as%20Freedom%20Foundation.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">06</div>
+                            <div class="chapter-title">Cybersecurity and Privacy as Freedom Foundation</div>
+                            <p class="chapter-description">Protecting crew sovereignty in digital coordination systems</p>
+                        </a>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%207%20Data%20Science%20as%20Planetary%20Sensing%20System.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">07</div>
+                            <div class="chapter-title">Data Science as Planetary Sensing System</div>
+                            <p class="chapter-description">Real-time awareness of our spaceship's vital signs and resources</p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
