Update chapter description for Author's Note

--- a/index.html
+++ b/index.html
@@ -1173,9 +1173,14 @@
                     </div>
                     <div class="chapters-grid">
                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Author's%20Note.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">CV</div>
+                            <div class="chapter-title">Cover</div>
+                            <p class="chapter-description">This book is published under a CC BY-SA license</p>
+                        </a>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Author's%20Note.md" target="_blank" class="chapter-card">
                             <div class="chapter-number">AN</div>
                             <div class="chapter-title">Author's Note</div>
-                            <p class="chapter-description">Leveraging AI for crew-level decision making and coordination</p>
+                            <p class="chapter-description">Working with AI is the new synergy.</p>
                         </a>
                         <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%205%20Blockchain%20as%20Truth%20and%20Abundance%20Infrastructure.md" target="_blank" class="chapter-card">
                             <div class="chapter-number">TC</div>
