--- a/index.html
+++ b/index.html
@@ -1182,12 +1182,12 @@
                             <div class="chapter-title">Author's Note</div>
                             <p class="chapter-description">Working with AI is the new synergy.</p>
                         </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%205%20Blockchain%20as%20Truth%20and%20Abundance%20Infrastructure.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">TC</div>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Contents.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">ToC</div>
                             <div class="chapter-title">Table of Contents</div>
-                            <p class="chapter-description">Building trustless coordination systems for resource democracy</p>
+                            <p class="chapter-description"></p>
                         </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/part_2_technological_toolkit/Chapter%206%20Cybersecurity%20and%20Privacy%20as%20Freedom%20Foundation.md" target="_blank" class="chapter-card">
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Prologue.md" target="_blank" class="chapter-card">
                             <div class="chapter-number">PRO</div>
                             <div class="chapter-title">PROLOGUE</div>
                             <p class="chapter-description">We stand at an unprecedented technological convergence.</p>
