--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
                             <div class="chapter-title">Cover</div>
                             <p class="chapter-description">This book is published under a CC BY-SA license</p>
                         </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Author's%20Note.md" target="_blank" class="chapter-card">
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Authors%20Note.md" target="_blank" class="chapter-card">
                             <div class="chapter-number">AN</div>
                             <div class="chapter-title">Author's Note</div>
                             <p class="chapter-description">Working with AI is the new synergy.</p>
