Add front matter section to index.html
Added front matter section with chapter links and descriptions.

--- a/index.html
+++ b/index.html
@@ -977,6 +977,36 @@
             </p>
 
             <div class="parts-container">
+                 <!-- Front Matter -->
+                <div class="part-section">
+                    <div class="part-header">
+                        <div class="part-number">Front</div>
+                        <h3 class="part-title">Front Matter</h3>
+                    </div>
+                    <div class="chapters-grid">
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Authors%20Note.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">CV</div>
+                            <div class="chapter-title">Cover</div>
+                            <p class="chapter-description">This book is published under a CC BY-SA license</p>
+                        </a>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Authors%20Note.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">AN</div>
+                            <div class="chapter-title">Author's Note</div>
+                            <p class="chapter-description">Working with AI is the new synergy.</p>
+                        </a>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Contents.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">ToC</div>
+                            <div class="chapter-title">Table of Contents</div>
+                            <p class="chapter-description"></p>
+                        </a>
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Prologue.md" target="_blank" class="chapter-card">
+                            <div class="chapter-number">PRO</div>
+                            <div class="chapter-title">PROLOGUE</div>
+                            <p class="chapter-description">We stand at an unprecedented technological convergence.</p>
+                        </a>
+                    </div>
+                </div>
+                
                 <!-- Part I: Current System -->
                 <div class="part-section">
                     <div class="part-header">
@@ -1163,35 +1193,6 @@
                             <div class="chapter-title">Appendix E</div>
                             <p class="chapter-description">Economic Foundations for the CARE$ Alternative Currency Model</p>
                          </a>
-                    </div>
-                </div>
-                 <!-- Front Matter -->
-                <div class="part-section">
-                    <div class="part-header">
-                        <div class="part-number">FMr</div>
-                        <h3 class="part-title">Front Matter</h3>
-                    </div>
-                    <div class="chapters-grid">
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Authors%20Note.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">CV</div>
-                            <div class="chapter-title">Cover</div>
-                            <p class="chapter-description">This book is published under a CC BY-SA license</p>
-                        </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Authors%20Note.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">AN</div>
-                            <div class="chapter-title">Author's Note</div>
-                            <p class="chapter-description">Working with AI is the new synergy.</p>
-                        </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Contents.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">ToC</div>
-                            <div class="chapter-title">Table of Contents</div>
-                            <p class="chapter-description"></p>
-                        </a>
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Prologue.md" target="_blank" class="chapter-card">
-                            <div class="chapter-number">PRO</div>
-                            <div class="chapter-title">PROLOGUE</div>
-                            <p class="chapter-description">We stand at an unprecedented technological convergence.</p>
-                        </a>
                     </div>
                 </div>
             </div>
