Update GitHub repository link in contact info

--- a/index.html
+++ b/index.html
@@ -1358,7 +1358,7 @@
                         <div class="info-icon">🐙</div>
                         <div class="info-content">
                             <h4>Development Bridge</h4>
-                            <p><a href="https://github.com/NoahOBodhi" target="_blank" class="info-link">GitHub Repository</a></p>
+                            <p><a href="https://github.com/NoahOBodhi/SSEv2_NEXUS_G" target="_blank" class="info-link">GitHub Repository</a></p>
                             <span class="info-note">Open-source collaboration hub</span>
                         </div>
                     </div>
