Add Discord server link to community hub
Added a link to the Discord server in the community hub section.

--- a/index.html
+++ b/index.html
@@ -1350,7 +1350,8 @@
                         <div class="info-content">
                             <h4>Community Hub</h4>
                             <p>Join our discussion channels</p>
-                            <span class="info-note">(Forum & Discord - Launching Soon)</span>
+                             <p><a href="https://discord.gg/eppQP5KvW4" target="_blank" class="info-link">Discord Server</a></p>
+                            <span class="info-note">Forum & Discord - Launching Soon</span>
                         </div>
                     </div>
                     
