Update contact information and add contribution note

--- a/index.html
+++ b/index.html
@@ -1340,7 +1340,8 @@
                         <div class="info-icon">📧</div>
                         <div class="info-content">
                             <h4>Mission Control</h4>
-                            <p>email: noah.o.bodhi@proton.me</p>
+                            <p>Contact Us</p>
+                            <p>noah.o.bodhi@proton.me</p>
                             <span class="info-note">(Coming Soon - Platform in Development)</span>
                         </div>
                     </div>
@@ -1359,6 +1360,7 @@
                         <div class="info-icon">🐙</div>
                         <div class="info-content">
                             <h4>Development Bridge</h4>
+                            <p>Contribute to our development</p>
                             <p><a href="https://github.com/NoahOBodhi/SSEv2_NEXUS_G" target="_blank" class="info-link">GitHub Repository</a></p>
                             <span class="info-note">Open-source collaboration hub</span>
                         </div>
