Fix typo in info-note span content

--- a/index.html
+++ b/index.html
@@ -1352,7 +1352,7 @@
                             <h4>Community Hub</h4>
                             <p>Join our discussion channels</p>
                              <p><a href="https://discord.gg/eppQP5KvW4" target="_blank" class="info-link">Discord Server</a></p>
-                            <span class="info-note">Forum & Discord - Launching Soon</span>
+                            <span class="info-note">Forums & Discord Server/span>
                         </div>
                     </div>
                     
