Rename 'Community Hub' to 'Communication Hub'

--- a/index.html
+++ b/index.html
@@ -1349,10 +1349,10 @@
                     <div class="contact-info-card">
                         <div class="info-icon">💬</div>
                         <div class="info-content">
-                            <h4>Community Hub</h4>
+                            <h4>Communication Hub</h4>
                             <p>Join our discussion channels</p>
                              <p><a href="https://discord.gg/eppQP5KvW4" target="_blank" class="info-link">Discord Server</a></p>
-                            <span class="info-note">Forums & Discord Server/span>
+                            <span class="info-note">Discord Server Forums</span>
                         </div>
                     </div>
                     
