Wrap email link in paragraph tag

--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@
                         <div class="info-content">
                             <h4>Mission Control</h4>
                             <p>Contact Us</p>
-                            <a href="mailto:noah.o.bodhi@ssev2-crew.org" class="info-link">noah.o.bodhi@ssev2-crew.org</a>
+                            <p><a href="mailto:noah.o.bodhi@ssev2-crew.org" class="info-link">noah.o.bodhi@ssev2-crew.org</a></p>
                             <span class="info-note">(Coming Soon - Platform in Development)</span>
                         </div>
                     </div>
