Update text for clarity and consistency

--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
              <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--crew-orange);">
                 <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             <p class="description">
-                A comprehensive implementation guide for transitioning from passenger consciousness 
+                A comprehensive implementation guide for transitioning from passive passenger 
                 to crew consciousness—designed to help communities, organizations, and individuals 
                 build abundance systems and operate our planetary spaceship with wisdom.
             </p>
@@ -930,9 +930,9 @@
             <div class="philosophy-card">
                 <h3>From Passenger to Crew</h3>
                 <p>
-                    This implementation guide draws from Buckminster Fuller's vision of Spaceship Earth, 
+                    This implementation guide draws from R. Buckminster Fuller's vision of Spaceship Earth, 
                     reimagined for the 21st century. It provides practical frameworks for transitioning 
-                    from scarcity-based passenger consciousness to abundance-oriented crew consciousness. 
+                    from scarcity-based passenger to abundance-oriented crew consciousness. 
                     Through 18 comprehensive chapters, you'll discover how AI, blockchain, cybersecurity, 
                     and data science can serve as tools for planetary coordination and resource democracy.
                 </p>
