Fix wording in implementation guide description
Corrected the phrasing in the implementation guide description.

--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
                 <strong>CURRENT STATUS: 1% Pirates | 98% Passengers | 1% Crew</strong>
             <p class="description">
                 A comprehensive implementation guide for transitioning from passive passenger 
-                to crew consciousness—designed to help communities, organizations, and individuals 
+                to crew consciousness. Designed to help individuals, communities, and organizations  
                 build abundance systems and operate our planetary spaceship with wisdom.
             </p>
             <div class="cta-buttons">
