--- a/index.html
+++ b/index.html
@@ -902,7 +902,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <div class="crew-badge">🚀 Implementation Guide Available</div>
+            <div href="#chapters" class="crew-badge">🚀 Implementation Guide Available</div>
             <h1>Spaceship Earth v2.0</h1>
             <p class="crew-message">You are crew. You are conscious. You are capable.</p>
              <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--crew-orange);">
