--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
                         <h3 class="part-title">Front Matter</h3>
                     </div>
                     <div class="chapters-grid">
-                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/00%20-%20Authors%20Note.md" target="_blank" class="chapter-card">
+                        <a href="https://github.com/NoahOBodhi/Spaceship_Earth_v2.0_An_Implementation_Guide/blob/main/original/front_matter/Cover.md" target="_blank" class="chapter-card">
                             <div class="chapter-number">CV</div>
                             <div class="chapter-title">Cover</div>
                             <p class="chapter-description">This book is published under a CC BY-SA license</p>
@@ -1481,3 +1481,4 @@
 </body>
 
 </html>
+
