Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -951,7 +951,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <div href="#chapters" class="crew-badge">🚀 Implementation Guide Available</div>
+            <a href="https://archive.org/details/spaceship-earth-v-2.0-an-implementation-guide" class="crew-badge">🌍Implementation Guide Available</a>
+            # <div href="#chapters" class="crew-badge">🚀 Implementation Guide Available</div>
             <h1>Spaceship Earth v2.0</h1>
             <p class="crew-message">You are crew. You are conscious. You are capable.</p>
              <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--crew-orange);">
@@ -1481,4 +1482,5 @@
 </body>
 
 </html>
+
 
