--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <a href="https://archive.org/details/spaceship-earth-v-2.0-an-implementation-guide" class="crew-badge">🌍Implementation Guide Available</a>
+            <a href="https://archive.org/details/spaceship-earth-v-2.0-an-implementation-guide" target="_blank" class="crew-badge">🌍Implementation Guide Available</a>
             <h1>Spaceship Earth v2.0</h1>
             <p class="crew-message">You are crew. You are conscious. You are capable.</p>
              <p style="font-size: 1.1rem; margin-bottom: 1rem; color: var(--crew-orange);">
@@ -1481,6 +1481,7 @@
 </body>
 
 </html>
+
 
 
 
